--- a/LeaveManagementSystem.Web/Views/LeaveTypes/Create.cshtml
+++ b/LeaveManagementSystem.Web/Views/LeaveTypes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LeaveManagementSystem.Web.Data.LeaveType
+﻿@model  LeaveTypeCreateVM
 
 @{
     ViewData["Title"] = "Create Leave Type";
@@ -19,10 +19,11 @@
             </div>
             <br/>
             <div class="form-group">
-                <label asp-for="NUmberOfDays" class="control-label"></label>
-                <input asp-for="NUmberOfDays" class="form-control" />
-                <span asp-validation-for="NUmberOfDays" class="text-danger"></span>
+                <label asp-for="NumberOfDays" class="control-label"></label>
+                <input asp-for="NumberOfDays" class="form-control" />
+                <span asp-validation-for="NumberOfDays" class="text-danger"></span>
             </div>
+            <input type="hidden" name="Id"value="12"/>
             <br/>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-success" />
