--- a/LeaveManagementSystem.Web/Views/LeaveTypes/Delete.cshtml
+++ b/LeaveManagementSystem.Web/Views/LeaveTypes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model LeaveManagementSystem.Web.Data.LeaveType
+﻿@model LeaveTypeDeleteVM
 
 @{
     ViewData["Title"] = "Delete Leave Type";
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NUmberOfDays)
+            @Html.DisplayNameFor(model => model.NumberOfDays)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NUmberOfDays)
+            @Html.DisplayFor(model => model.NumberOfDays)
         </dd>
     </dl>
     
